@@ -54,6 +54,9 @@ This IS the second real page!
 <server>
 http
 </server>
+<features>
+crypto
+</features>
  <name>
 HTTP with Digest authorization with stale=true
  </name>
