@@ -53,6 +53,9 @@ This IS the real page!
 <server>
 http
 </server>
+<features>
+crypto
+</features>
  <name>
 HTTP PUT with --anyauth authorization (picking Digest)
  </name>
