@@ -51,6 +51,9 @@ This IS the real page!
 <server>
 http
 </server>
+<features>
+crypto
+</features>
  <name>
 HTTP with two Digest authorization headers
  </name>
